decomposition & 1st version routing

--- a/src/components/Navbar/NavItem/NavItem.module.css
+++ b/src/components/Navbar/NavItem/NavItem.module.css
@@ -1,7 +1,17 @@
-@import url('../../vireables.css');
-
-
-
-  .item {
+.item {
     padding-top: 1rem;
-  }
+    text-transform: capitalize;
+}
+
+.item a {
+    text-decoration: none;
+    color: inherit;
+    transition: all 0.2s ease;
+}
+
+.item a:hover {
+    color: var(--border);
+    border: 3px solid var(--border);
+    box-sizing: border-box;
+    padding: 0.1rem 1rem 0.1rem .1rem;
+}
