--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,11 +5,9 @@
   display: grid;
   align-content: baseline;
   padding-left: 1rem;
-  text-transform: capitalize;
 
 }
 
-
-
-
-
+.nav:last-of-type {
+  padding-bottom: 1rem;
+}
