--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -2,4 +2,21 @@
 
 .dialogs {
   display: grid;
+  grid-template-columns: 2fr 10fr;
+}
+
+.dialogsItems {
+  color: aqua;
+}
+
+.dialog {
+}
+
+
+.messages {
+
+}
+
+.message {
+
 }
