(64) fix disabled oll buttons

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -24,6 +24,11 @@
     font-family: Bahnschrift;
 
 }
+.followBtn:disabled {
+    cursor: not-allowed;
+    opacity: .5;
+}
+
 
 .fullName {
     align-self: auto;
