--- a/src/components/common/FormsControls/FormControls.module.css
+++ b/src/components/common/FormsControls/FormControls.module.css
@@ -11,12 +11,14 @@
 
 }
 
-.error span {
+.error span,
+.error{
     color: #ff0000;
     border: 1px solid #ff0000;
     padding: 0.3rem;
     border-radius: 0px 15px 5px 5px;
     animation: blinker 1s linear infinite;
+    width: fit-content;
 }
 
 @keyframes blinker {
@@ -24,3 +26,5 @@
         opacity: 0.7;
     }
 }
+
+
